// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeaponsTable render should work with all props 1`] = `
<div
  className="weapons-table"
>
  <h2
    className="icon fa-cutlery"
  >
    Weapons
  </h2>
  <div
    className="weapons-table--search"
  >
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Name
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        id="name"
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Name..."
        type="text"
        value=""
      />
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Properties
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All Properties
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        >
          <li
            className={null}
            data-value="ammunition"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Ammunition
            </label>
          </li>
          <li
            className={null}
            data-value="finesse"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Finesse
            </label>
          </li>
          <li
            className={null}
            data-value="heavy"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Heavy
            </label>
          </li>
          <li
            className={null}
            data-value="light"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Light
            </label>
          </li>
          <li
            className={null}
            data-value="loading"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Loading
            </label>
          </li>
          <li
            className={null}
            data-value="reach"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Reach
            </label>
          </li>
          <li
            className={null}
            data-value="ranged"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Ranged
            </label>
          </li>
          <li
            className={null}
            data-value="special"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Special
            </label>
          </li>
          <li
            className={null}
            data-value="thrown"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Thrown
            </label>
          </li>
          <li
            className={null}
            data-value="two-handed"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Two-Handed
            </label>
          </li>
          <li
            className={null}
            data-value="versatile"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Versatile
            </label>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Weapon Types
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All Weapon Types
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        >
          <li
            className={null}
            data-value="simple melee"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Simple Melee Weapon
            </label>
          </li>
          <li
            className={null}
            data-value="simple ranged"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Simple Ranged Weapon
            </label>
          </li>
          <li
            className={null}
            data-value="martial melee"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Martial Melee Weapon
            </label>
          </li>
          <li
            className={null}
            data-value="martial ranged"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Martial Ranged Weapon
            </label>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Damage
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Dice count"
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        d
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Dice Sizes
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        >
          <li
            className={null}
            data-value={4}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              4
            </label>
          </li>
          <li
            className={null}
            data-value={6}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              6
            </label>
          </li>
          <li
            className={null}
            data-value={8}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              8
            </label>
          </li>
          <li
            className={null}
            data-value={10}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              10
            </label>
          </li>
          <li
            className={null}
            data-value={12}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              12
            </label>
          </li>
        </ul>
      </div>
      <span
        className="nice-input-addon"
      >
        Type
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All Damage Types
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        >
          <li
            className={null}
            data-value="acid"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Acid
            </label>
          </li>
          <li
            className={null}
            data-value="bludgeoning"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Bludgeoning
            </label>
          </li>
          <li
            className={null}
            data-value="cold"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Cold
            </label>
          </li>
          <li
            className={null}
            data-value="fire"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Fire
            </label>
          </li>
          <li
            className={null}
            data-value="force"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Force
            </label>
          </li>
          <li
            className={null}
            data-value="lightning"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Lightning
            </label>
          </li>
          <li
            className={null}
            data-value="necrotic"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Necrotic
            </label>
          </li>
          <li
            className={null}
            data-value="piercing"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Piercing
            </label>
          </li>
          <li
            className={null}
            data-value="poison"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Poison
            </label>
          </li>
          <li
            className={null}
            data-value="psychic"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Psychic
            </label>
          </li>
          <li
            className={null}
            data-value="radiant"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Radiant
            </label>
          </li>
          <li
            className={null}
            data-value="slashing"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Slashing
            </label>
          </li>
          <li
            className={null}
            data-value="thunder"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Thunder
            </label>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <table
    className="nice-table condensed bordered responsive"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Damage
        </th>
        <th>
          Range
        </th>
        <th>
          Cost
        </th>
        <th>
          Properties
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-id={1}
      >
        <th>
          Dagger
          <div
            className="base-link-group nice-btn-group"
          >
            <a
              className="cursor-pointer nice-btn-alt icon fa-eye"
              href={undefined}
              onClick={[Function]}
            >
              View
            </a>
          </div>
        </th>
        <td>
          <div
            className="dice-notation inline capitalize"
          >
            <code>
              1
              d
              4
              
            </code>
            piercing
          </div>
        </td>
        <td>
          <div
            className="reach inline"
          >
            20
             ft. / 
            60
             ft.
          </div>
        </td>
        <td>
          <div
            className="coinage capitalize"
          >
            2 Gold
          </div>
        </td>
        <td>
          <ul>
            <li>
              <div
                className="list-label inline"
              >
                Simple Melee Weapon
              </div>
            </li>
            <li>
              <div
                className="list-label inline"
              >
                Thrown
              </div>
            </li>
            <li>
              <div
                className="list-label inline"
              >
                Finesse
              </div>
            </li>
            <li>
              <div
                className="list-label inline"
              >
                Light
              </div>
            </li>
          </ul>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <td
          colSpan={5}
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WeaponsTable render should work without props 1`] = `
<div
  className="weapons-table"
>
  <h2
    className="icon fa-cutlery"
  >
    Weapons
  </h2>
  <div
    className="weapons-table--search"
  >
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Name
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        id="name"
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Name..."
        type="text"
        value=""
      />
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Properties
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All Properties
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        >
          <li
            className={null}
            data-value="ammunition"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Ammunition
            </label>
          </li>
          <li
            className={null}
            data-value="finesse"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Finesse
            </label>
          </li>
          <li
            className={null}
            data-value="heavy"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Heavy
            </label>
          </li>
          <li
            className={null}
            data-value="light"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Light
            </label>
          </li>
          <li
            className={null}
            data-value="loading"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Loading
            </label>
          </li>
          <li
            className={null}
            data-value="reach"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Reach
            </label>
          </li>
          <li
            className={null}
            data-value="ranged"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Ranged
            </label>
          </li>
          <li
            className={null}
            data-value="special"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Special
            </label>
          </li>
          <li
            className={null}
            data-value="thrown"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Thrown
            </label>
          </li>
          <li
            className={null}
            data-value="two-handed"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Two-Handed
            </label>
          </li>
          <li
            className={null}
            data-value="versatile"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Versatile
            </label>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Weapon Types
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All Weapon Types
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        >
          <li
            className={null}
            data-value="simple melee"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Simple Melee Weapon
            </label>
          </li>
          <li
            className={null}
            data-value="simple ranged"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Simple Ranged Weapon
            </label>
          </li>
          <li
            className={null}
            data-value="martial melee"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Martial Melee Weapon
            </label>
          </li>
          <li
            className={null}
            data-value="martial ranged"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Martial Ranged Weapon
            </label>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="nice-control-group"
    >
      <span
        className="nice-input-addon"
      >
        Damage
      </span>
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Dice count"
        type="number"
        value=""
      />
      <span
        className="nice-input-addon"
      >
        d
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          Dice Sizes
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        >
          <li
            className={null}
            data-value={4}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              4
            </label>
          </li>
          <li
            className={null}
            data-value={6}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              6
            </label>
          </li>
          <li
            className={null}
            data-value={8}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              8
            </label>
          </li>
          <li
            className={null}
            data-value={10}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              10
            </label>
          </li>
          <li
            className={null}
            data-value={12}
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              12
            </label>
          </li>
        </ul>
      </div>
      <span
        className="nice-input-addon"
      >
        Type
      </span>
      <div
        className="nice-dropdown nice-form-control"
      >
        <button
          className="nice-btn"
          onClick={[Function]}
        >
          All Damage Types
          <i
            className="icon fa-angle-down"
          />
        </button>
        <ul
          className="dropdown-menu"
          onClick={null}
        >
          <li
            className={null}
            data-value="acid"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Acid
            </label>
          </li>
          <li
            className={null}
            data-value="bludgeoning"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Bludgeoning
            </label>
          </li>
          <li
            className={null}
            data-value="cold"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Cold
            </label>
          </li>
          <li
            className={null}
            data-value="fire"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Fire
            </label>
          </li>
          <li
            className={null}
            data-value="force"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Force
            </label>
          </li>
          <li
            className={null}
            data-value="lightning"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Lightning
            </label>
          </li>
          <li
            className={null}
            data-value="necrotic"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Necrotic
            </label>
          </li>
          <li
            className={null}
            data-value="piercing"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Piercing
            </label>
          </li>
          <li
            className={null}
            data-value="poison"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Poison
            </label>
          </li>
          <li
            className={null}
            data-value="psychic"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Psychic
            </label>
          </li>
          <li
            className={null}
            data-value="radiant"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Radiant
            </label>
          </li>
          <li
            className={null}
            data-value="slashing"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Slashing
            </label>
          </li>
          <li
            className={null}
            data-value="thunder"
          >
            <label>
              <input
                checked={false}
                disabled={undefined}
                onChange={[Function]}
                type="checkbox"
              />
              Thunder
            </label>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <table
    className="nice-table condensed bordered responsive"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Damage
        </th>
        <th>
          Range
        </th>
        <th>
          Cost
        </th>
        <th>
          Properties
        </th>
      </tr>
    </thead>
    <tbody />
    <tbody>
      <tr>
        <td
          colSpan={5}
        />
      </tr>
    </tbody>
  </table>
</div>
`;
